--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.testing {
+  background-image: url(https://www.si.com/.image/t_share/MTY4MTkyMjczODM4OTc0ODQ5/cfp-trophy-deitschjpg.jpg);
+}
