mobile version of events card is added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,8 @@
   }
 }
 
-.testing {
-  background-image: url(https://www.si.com/.image/t_share/MTY4MTkyMjczODM4OTc0ODQ5/cfp-trophy-deitschjpg.jpg);
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
