--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,11 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --sidebar: 0 0% 100%;
+    --sidebar-foreground: 20 14.3% 4.1%;
+    --sidebar-muted: 60 4.8% 95.9%;
+    --sidebar-muted-foreground: 20 14.3% 4.1%;
   }
 
   .dark {
@@ -63,6 +68,11 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --sidebar: 0 0% 3.9%;
+    --sidebar-foreground: 0 0% 98%;
+    --sidebar-muted: 0 2% 10%;
+    --sidebar-muted-foreground: 0 0% 63.9%;
   }
 }
 
@@ -73,6 +83,36 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.sidebar {
+  scrollbar-width: thin;
+  scrollbar-color: #999999 transparent;
+}
+
+/* For Google Chrome and others */
+.sidebar::-webkit-scrollbar {
+  background: transparent;
+  width: 3px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background: #999999;
+  border-radius: 10px;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #8d8d8d;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #8d8d8d;
+  border-radius: 5px;
 }
 
 .truncate {
